--- a/client/.babelrc
+++ b/client/.babelrc
@@ -3,5 +3,10 @@
         "@babel/preset-env",
         "@babel/preset-react",
         "@babel/preset-typescript"
+    ],
+    "plugins": [
+        ["transform-inline-environment-variables", {
+            "include": ["NODE_ENV"]
+          }]
     ]
 }
