Feat, Style: vite svg로 아이콘을 컴포넌트로 import, 호버링 이펙트 추가

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,10 +20,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
   },
  "include": [
-    "src"
+  "src"
   ],
-  "references": [{ "path" : "./tsconfig.node.json"}]
+  "references": [{ "path" : "./tsconfig.node.json"}],
 }
