--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -50,6 +50,7 @@
     "no-multiple-empty-lines": "error",
     "no-unsafe-optional-chaining": "off",
     "no-non-null-assertion": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-no-target-blank": "off"
   }
 }
