--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,8 +1,7 @@
 {
-    "singleQuote": true,
-    "printWidth": 120,
-    "tabWidth": 2,
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "arrowParens": "avoid"
+  "$schema": "https://json.schemastore.org/prettierrc",
+    "semi": true,
+    "trailingComma": "all",
+    "arrowParens": "always",
+    "endOfLine": "lf"
   }
