--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "json-server": "^0.17.3",
     "prettier": "^2.8.8",
     "prettier-config-nick": "^1.0.8",
     "typescript": "^4.9.5",
