Feat: 제목 변경 컴포넌트 완성

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -3,5 +3,6 @@
   "semi": true,
   "trailingComma": "all",
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "singleQuote": true
 }
