--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -18,3 +18,10 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+
+
+logging:
+  level:
+    root: INFO
+    com.example: DEBUG
+  file: /path/to/log/file.log
