--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -6,11 +6,9 @@ jwt:
   expiration: 86400
 
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dbforuser?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: dlrla0413
+  h2:
+    console:
+      enabled: true
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -18,3 +16,4 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+
