--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/react": "^4.8.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -65,6 +67,7 @@
     "json-server": "^0.17.3",
     "prettier": "^2.8.8",
     "prettier-config-nick": "^1.0.8",
+    "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.5",
     "vite-plugin-svgr": "^3.2.0",
