--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
