--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ jwt:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dbforuser?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/dbforuser1?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: dlrla0413
 
@@ -17,7 +17,7 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 
 
 logging:
