Merge: member-conversation

--- a/server/src/main/resources/application-local.yml
+++ b/server/src/main/resources/application-local.yml
@@ -20,3 +20,12 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 1073148988890-188k39pvbsb7dr0adig03e1hgd96tbts.apps.googleusercontent.com
+            client-secret: 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
+      profiles:
+        include: oauth
