--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,9 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
-    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
@@ -63,6 +63,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "@vitejs/plugin-react": "^4.0.0",
@@ -77,6 +78,7 @@
     "prettier-config-nick": "^1.0.8",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "vite": "^4.3.5",
     "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
