--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
   security:
     oauth2:
       client:
