--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-page-slides": "^0.1.3",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
