--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -12,14 +12,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install 
-        working-directory: /client
+        working-directory: ./client
       - name: Build
         run: npm run build
         env: 
           VITE_APP_URL: ${{ secrets.VITE_APP_URL }}
           VITE_BASE_URL:  ${{ secrets.VITE_BASE_URL }}
           VITE_ClientID:  ${{ secrets.VITE_ClientId }}
-        working-directory: /client
+        working-directory: ./client
       - name: SHOW AWS CLI VERSION
         run: aws --version
       - name: Sync Bucket
