--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -28,7 +28,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 <?> \
+          aws s3 sync \
             --region ap-northeast-2 \
             build s3://chatcrawl.live \
             --delete
